5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1791_1618.log
== TEST (2019-05-29 14:29:08) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
r = size(v)
k= 0
t = 0
while(k == r):
	
	
-- ERROR:
File "XXXX", line 9
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:30:42) 
-- CODE:
from numpy import*
v = array(eval(input(str("entrada: "))))
r = size(v)
k= 0
t = 0
print(v)
while(k == r):
	
	
-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:19:06) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
r = size(v)
k= 0
t = 0
s = 0
t = "x"

while(k<r):
	if(r == 1):
		print(v[s])
	else:
		c = v[s] + "x"
		print()
	s = s + 1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:19:29) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
r = size(v)
k= 0
t = 0
s = 0
t = "x"

while(k<r):
	if(r == 1):
		print(v[s])
	else:
		c = v[s] 
		print(c)
	s = s + 1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:21:32) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
r = size(v)
k= 0
t = 0
s = 0

while(k<r):
	if(r == 1):
		print(v[s])
	else:
		c = v[s] 
		print(c)
	s = s + 1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:21:50) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
r = size(v)
k= 0
t = 0
s = 0

while(k<r):
	if(r == 1):
		print(v[s])
	else:
		
		print(c)
	s = s + 1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:22:10) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
r = size(v)
k= 0
t = 0
s = 0

while(k<r):
	if(r == 1):
		print(v[s])
	else:
		
		print(v[s])
	s = s + 1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:22:48) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
r = size(v)
k= 0
t = 0
s = 0

while(k<r):
	if(r == 1):
		print(v[s])
	else:
		
		print(v[s])
	s = s + 1
	k = k + 1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:24:50) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
r = size(v)
k= 0
t = 0
s = 0

while(k<r):
	if((r == 1)or(r==0)):
		print(v[s])
	else:
		
		print(v[s],"x^",t)
	s = s + 1
	k = k + 1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:25:00) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
r = size(v)
k= 0
t = 0
s = 0

while(k<r):
	if((r == 1)or(r==0)):
		print(v[s])
	else:
		
		print(v[s],"x^",t)
	s = s + 1
	k = k + 1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:25:09) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
r = size(v)
k= 0
t = 0
s = 0

while(k<r):
	if((r == 1)or(r==0)):
		print(v[s])
	else:
		
		print(v[s],"x^",t)
	s = s + 1
	k = k + 1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:25:47) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
r = size(v)
k= 0
t = 0
s = 0

while(k<r):
	if((r == 1)or(r==2)):
		print(v[s])
	else:
		
		print(v[s],"x^",t)
	s = s + 1
	k = k + 1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:26:01) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
r = size(v)
k= 0
t = 0
s = 0

while(k<r):
	if((r == 1)or(r==2)):
		print(v[s],"x")
	else:
		
		print(v[s],"x^",t)
	s = s + 1
	k = k + 1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:26:13) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
r = size(v)
k= 0
t = 0
s = 0

while(k<r):
	if((r == 1)or(r==2)):
		print(v[s]"x")
	else:
		
		print(v[s],"x^",t)
	s = s + 1
	k = k + 1
	
	
-- ERROR:
File "XXXX", line 10
    print(v[s]"x")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:26:37) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
r = size(v)
k= 0
t = 0
s = 0

while(k<r):
	if((r == 1)or(r==2)):
		x = (v[s],"x")
	else:
		
		print(v[s],"x^",t)
	s = s + 1
	k = k + 1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:26:48) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
r = size(v)
k= 0
t = 0
s = 0

while(k<r):
	if((r == 1)or(r==2)):
		x = (v[s],"x")
		print(x)
	else:
		
		print(v[s],"x^",t)
	s = s + 1
	k = k + 1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:27:13) 
-- CODE:
from numpy import*
v = array(eval(input("entrada: ")))
r = size(v)
k= 0
t = 0
s = 0

while(k<r):
	if((r == 1)or(r==2)):
		x = v[s]+"x"
		print(x)
	else:
		
		print(v[s],"x^",t)
	s = s + 1
	k = k + 1
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
